fix safari z-index issue

--- a/public/assets/css/components/page.css
+++ b/public/assets/css/components/page.css
@@ -22,6 +22,7 @@
       &,
       & * {
         pointer-events: auto;
+        transform: translateZ(1px);
       }
     }
   }
